fix: align table cell in 1 row

--- a/src/styles/pages/QueriesPage.scss
+++ b/src/styles/pages/QueriesPage.scss
@@ -599,6 +599,7 @@
           box-shadow: none;
           box-shadow: inset 0px -1px 0px #e8eaed;
           padding: 0 120px 0 24px;
+          white-space: nowrap;
         }
 
         .right-column {
